# nova-lilith-os

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cross-compiler/: CMakeLists.txt  build.sh
src/: CMakeLists.txt  boot.s
src/kernel/: crti.s  crtn.s  descriptortable.cpp  descriptortable.h  kernel.cpp
src/kernel/interrupts/: interrupthandler.cpp  interrupthandler.h  interrupttable.cpp  interrupttable.h  interruptwrapper.s  pic.cpp  pic.h
src/kernel/keyboard/: keyboard.cpp  keyboard.h
src/kernel/libk/: abort.cpp  abort.h  asm.h  io.cpp  io.h  mem.h  ringbuffer.cpp  ringbuffer.h
src/kernel/memory/: pagedirectoryentry.cpp  pagedirectoryentry.h  pagetableentry.cpp  pagetableentry.h
src/kernel/structures/: descriptortable.cpp  descriptortable.h
src/kernel/terminal/: terminal.cpp  terminal.h
